--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,5 @@ discord.py==2.4.0
 audioop-lts==0.2.1; python_version>='3.13'
 python-dotenv==1.0.1
 prisma==0.15.0
+requests==2.32.3
+beautifulsoup4==4.12.3
