--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,7 @@ exclude = ["venv", ".venv", "**/__pycache__"]
 reportUnnecessaryTypeIgnoreComment = "error"
 reportPrivateLocalImportUsage = "error"
 reportPrivateImportUsage = "error"
+reportPrivateUsage = "error"
 reportUnusedCallResult = "none"
 reportMissingTypeStubs = "none"
 reportCallInDefaultInitializer = "none"
@@ -19,7 +20,7 @@ indent-style = "space"
 
 [tool.ruff.lint]
 select = ["E", "F", "UP", "B", "SIM", "I", "Q", "TID", "D"]
-ignore = ["D1", "D417"]
+ignore = ["B018", "D1", "D417"]
 
 [tool.ruff.lint.per-file-ignores]
 "__init__.py" = ["F403", "TID252"]
