--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,5 +10,7 @@
         "nameless.sqlite": true,
         "nameless.cache": true,
         "nameless/command/__init__.py": true,
+        ".python-version": true,
+        "uv.lock": true
     }
 }
