--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,22 @@
+[project]
+name = "nameless"
+version = "6.6.6"
+description = "A Discord BOT, written with batteries in mind."
+readme = "README.md"
+requires-python = ">=3.12"
+dependencies = [
+    "audioop-lts==0.2.1 ; python_full_version >= '3.13'",
+    "beautifulsoup4>=4.12.3",
+    "discord-py>=2.4.0",
+    "prisma>=0.15.0",
+    "python-dotenv>=1.0.1",
+    "requests>=2.32.3",
+    "uv>=0.5.24",
+]
+
+[dependency-groups]
+dev = ["basedpyright>=1.24.0", "ruff>=0.9.3"]
+
 [tool.basedpyright]
 exclude = ["venv", ".venv", "**/__pycache__"]
 reportUnnecessaryTypeIgnoreComment = "error"
@@ -6,7 +25,6 @@ reportPrivateImportUsage = "error"
 reportPrivateUsage = "error"
 reportUnusedCallResult = "none"
 reportMissingTypeStubs = "none"
-reportCallInDefaultInitializer = "none"
 typeCheckingMode = "recommended"
 
 [tool.ruff]
