--- a/.github/workflows/nameless.yml
+++ b/.github/workflows/nameless.yml
@@ -13,6 +13,9 @@ on:
 permissions:
   contents: write
 
+env:
+  UV_SYSTEM_PYTHON: 1
+
 jobs:
   python:
     runs-on: ubuntu-latest
@@ -41,7 +44,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          uv sync --all-extras --dev
+          uv sync --all-extras
 
       - name: Create Prisma client
         run: |
