--- a/.github/workflows/nameless.yml
+++ b/.github/workflows/nameless.yml
@@ -29,6 +29,7 @@ jobs:
         uses: astral-sh/setup-uv@v5
         with:
           enable-cache: true
+          version: "0.5.24"
           cache-dependency-glob: "uv.lock"
 
       - name: Pin Python version for uv
@@ -52,16 +53,16 @@ jobs:
 
       - name: Create Prisma client
         run: |
-          prisma db push
+          uv run prisma db push
 
       - name: Fix the code with ruff
         run: |
-          ruff check --exit-zero .
-          ruff format .
+          uv run ruff check --exit-zero .
+          uv run ruff format .
 
       - name: Type checking with BasedPyright
         run: |
-          basedpyright
+          uv run basedpyright
 
       - name: Push the formatted code if needed.
         uses: stefanzweifel/git-auto-commit-action@v5
