--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,16 +6,17 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "audioop-lts==0.2.1 ; python_full_version >= '3.13'",
-    "beautifulsoup4>=4.12.3",
-    "discord-py>=2.4.0",
-    "prisma>=0.15.0",
-    "python-dotenv>=1.0.1",
-    "requests>=2.32.3",
-    "uv>=0.5.24",
+    "beautifulsoup4==4.12.3",
+    "discord-py==2.4.0",
+    "jishaku==2.6.0",
+    "prisma==0.15.0",
+    "python-dotenv==1.0.1",
+    "requests==2.32.3",
+    "uv==0.5.24",
 ]
 
 [dependency-groups]
-dev = ["basedpyright>=1.24.0", "ruff>=0.9.3"]
+dev = ["basedpyright==1.24.0", "ruff==0.9.3"]
 
 [tool.basedpyright]
 exclude = ["venv", ".venv", "**/__pycache__"]
