--- a/nameless.toml
+++ b/nameless.toml
@@ -11,5 +11,5 @@ guilds = []
 name = "default"
 uri = "http://localhost:2333"
 password = "youshallnotpass"
-is_default = true
-autostart = true
+auto_start = true
+auto_update = true
